name:                hw2-RevealMind
version:             0.1.0.0
synopsis:            Synopsis for task 2
description:         Task 2 for FP ITMO course

homepage:            https://github.com/fp-ctd-itmo/hw2-RevealMind#readme
license:             MIT
license-file:        LICENSE
author:              Dmitry Janchenkov
maintainer:          99_dimas@mail.ru
copyright:           2020 Dmitry Janchenkov

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Parser, Types, Scaner, Invoker, Changer
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
                     , filepath
                     , directory
                     , optparse-applicative
                     , mtl
                     , bytestring
                     , time
                     , unordered-containers
                     , transformers
                     , strict

  default-language:    Haskell2010

executable hw2-RevealMind
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hw2-RevealMind
                     , optparse-applicative
                     , transformers
                     , time
  default-language:    Haskell2010
